# FSAutomata

./: .gitignore  Alphabet.cpp  Alphabet.h  Automaton.cpp  Automaton.h  CMakeLists.txt  FSAutomataWin64.7z  State.cpp  State.h  States.cpp  States.h  Transition.cpp  Transition.h  Transitions.cpp  Transitions.h  Word.cpp  Word.h  main.cpp
src/FSAutomata/: CMakeLists.txt  main.cpp
src/FSAutomataLib/: Alphabet.h  Automaton.cpp  Automaton.h  CMakeLists.txt  State.cpp  Transition.cpp  Transitions.cpp  Word.cpp  Word.h
tests/: CMakeLists.txt  tests.cpp
tests/test_files/: result.txt  test.txt  words  words.result
